trying to fix h1 / image now
kinda works, still messed up positioning and image is now suuuuper tiny

--- a/CV2/styles/styles.css
+++ b/CV2/styles/styles.css
@@ -83,6 +83,7 @@ section {
   align-items: flex-end;
   text-align: right;
   justify-content: center;
+  margin-top: 120px;
 }
 span {
   color: var(--main-color);
@@ -96,7 +97,9 @@ span {
   font-size: 3.5rem;
 }
 /* PROBLEM HERE, H1 IS STUCK IN NAVBAR, GOING TO MOVE ON, WASTED TOO MUCH TIME, FIX LATER 10:00 , MARGIN, BORDER AND GAP NOT WORKING, 
-Just duplicated it, works but not what I want, could just put a blank div or h1 there to placeholde/push down, looks fine for now with the blur */
+Just duplicated it, works but not what I want, could just put a blank div or h1 there to placeholde/push down, looks fine for now with the blur 
+Removed second h1, added margin-top to .home-content of 120px, fixed it on my monitor, now the image is messed up, also adding it there
+now, the image is suuuuuuper tiny*/
 .home-content h1 {
   font-size: 7rem;
   font-weight: 700;
@@ -108,6 +111,7 @@ Just duplicated it, works but not what I want, could just put a blank div or h1 
   width: 32vw;
   border-radius: 50%;
   box-shadow: 0 0 25px var(--main-color);
+  margin-top: 120px;
 }
 .home-img img:hover {
   box-shadow: 0 0 25px var(--main-color), 0 0 50px var(--main-color),
